# trophydice

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.dev  LICENSE.txt  Makefile  README.rst  asgi.py  docker-compose.yml  fly.toml  heroku.yml  package-lock.json  pyproject.toml  teststack.toml
.github/workflows/: fly.yml
app/: utils.py
docs/superpowers/plans/: 2026-04-22-ui-redesign.md
docs/superpowers/specs/: 2026-04-22-ui-redesign-design.md
files/: run-dev.sh  run-server.sh  setup-pyenv.sh
files/dice/: LICENSE.txt
scripts/: listen.py
trophydice/: app.py  config.py  database.py  socketio.py
trophydice/handlers/v1/: roll.py  room.py  test.py
trophydice/handlers/v2/: roll.py
trophydice/models/: rolls.py  rooms.py
trophydice/utils/: socket.py  spa.py
ui/: Makefile  README.md  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js  vite.config.ts
ui/src/: App.vue  api.js  app.js  eventBus.ts  main.ts  modals.js  rolls.js  sidenav.js  socket.ts  swagger.ts
ui/src/assets/: base.css
ui/src/components/: GenericRoll.vue  InputNumber.vue  NickList.vue  RollCards.vue  RollTable.vue  RollType.vue  RoomModal.vue  SideNav.vue  UserModal.vue
ui/src/plugins/: vuetify.js
