[tool.poetry]
name = "trophydice"
version = "0.1.0"
description = "Application for rolling trophy dice as a group"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
python-socketio = "^5.5.2"
dicetray = "^2.1.1"
figenv = "^1.2.0"
uvicorn = "^0.17.4"
websockets = "^10.1"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
