[tool.poetry]
name = "trophydice"
version = "0.1.0"
description = "Application for rolling trophy dice as a group"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.0"
python-socketio = "^5.7.2"
dicetray = "^2.1.1"
figenv = "^1.2.0"
uvicorn = "^0.20.0"
websockets = "^10.4"
newrelic = "^8.5.0"
bugsnag = "^4.3.0"
redis = "^4.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.1"
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.4"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
