[tool.poetry]
name = "trophydice"
version = "0.1.0"
description = "Application for rolling trophy dice as a group"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]
license = "APACHE-2.0"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.89.0"
python-socketio = "^5.7.2"
dicetray = "^2.1.1"
figenv = "^1.2.0"
uvicorn = "^0.20.0"
websockets = "^10.4"
bugsnag = "^4.3.0"
redis = "^4.4.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.4"}
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
honeycomb-opentelemetry = "^0.2.3b0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.4"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
